<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layoutTitulo"
    android:paddingTop="10sp"
    android:paddingBottom="10sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_seleccione"
        android:id="@+id/textUbicacion"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textSize="25dp"
        android:textColor="@color/habitabilidad" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_cp"
        android:id="@+id/textCodigoPostal"
        android:padding="20dp"
        android:textSize="16dp"
        android:layout_below="@+id/textUbicacion"
        android:layout_centerHorizontal="true"
        android:textColor="@color/habitabilidad" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editTextCodigoPostal"
        android:layout_below="@+id/textCodigoPostal"
        android:layout_centerHorizontal="true" />

    <fragment
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Settings_activity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/editTextCodigoPostal"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttonOk_codigo_postal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_buttonOK"
        android:textColor="@color/white"
        android:id="@+id/buttonOk_codigo_postal"
        android:background="@color/habitabilidad"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />


</RelativeLayout>

