<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".views.Menu_Acrivity"
    android:orientation="vertical">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/habitabilidad"
                android:id="@+id/container_habitabilidad">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/habitabilidad_100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tit_habitabilidad"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/ocio"
                android:id="@+id/container_ocio">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ocio_100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tit_ocio"
                    android:layout_below="@+id/imageView2"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/servicios"
                android:id="@+id/container_servicios">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/servicios_100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tit_servicios"
                    android:layout_below="@+id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/seguridad"
                android:id="@+id/container_seguridad">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/seguridad_100" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tit_seguridad"
                    android:layout_below="@+id/imageView4"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:textSize="14dp"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
