<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".views.Habitabilidad_Activity">

    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cabecera">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/container_habitabilidad"
            android:background="@color/habitabilidad">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/habitabilidad_50" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/container_ocio"
            android:background="@color/ocio">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ocio_50" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/container_servicios"
            android:background="@color/servicios">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/servicios_50" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/container_seguridad"
            android:background="@color/seguridad">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/seguridad_50" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tit_seguridad"
        android:id="@+id/textViewTitulo"
        android:textColor="@color/button_normal"
        android:textAlignment="center"
        android:textSize="16sp"
        android:padding="10sp"
        android:layout_below="@+id/cabecera"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/textViewTitulo"
        android:id="@+id/cuerpo"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/buttonWeb">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_pregunta1"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_normal"
                    android:background="@android:color/transparent"
                    android:text="@string/seg_txt_drogas"
                    android:id="@+id/button_pregunta1"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left|center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tu voto: 7,50"
                    android:id="@+id/emitido1"
                    android:background="@color/gris"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total: 8,00"
                    android:id="@+id/total1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:textColor="@color/seguridad" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_pregunta1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_pregunta2"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_normal"
                    android:background="@android:color/transparent"
                    android:text="@string/seg_txt_peleas"
                    android:id="@+id/button_pregunta2"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left|center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tu voto: 4,50"
                    android:id="@+id/emitido2"
                    android:padding="5dp"
                    android:background="@color/gris" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total: 5,00"
                    android:id="@+id/total2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:textColor="@color/seguridad" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_pregunta2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_pregunta3"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_normal"
                    android:background="@android:color/transparent"
                    android:text="@string/seg_txt_prostitucion"
                    android:id="@+id/button_pregunta3"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left|center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tu voto: 7,25"
                    android:id="@+id/emitido3"
                    android:padding="5dp"
                    android:background="@color/gris" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total: 7,50"
                    android:id="@+id/total3"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:textColor="@color/seguridad" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_pregunta3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_pregunta4"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_normal"
                    android:background="@android:color/transparent"
                    android:text="@string/seg_txt_robos"
                    android:id="@+id/button_pregunta4"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left|center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tu voto: 6,00"
                    android:id="@+id/emitido4"
                    android:padding="5dp"
                    android:background="@color/gris" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total: 7,00"
                    android:id="@+id/total4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:textColor="@color/seguridad" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_pregunta4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_pregunta5"
            android:layout_weight="1"
            android:layout_marginBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_normal"
                    android:background="@android:color/transparent"
                    android:text="@string/seg_txt_otros"
                    android:id="@+id/button_pregunta5"
                    android:padding="5dp"
                    android:layout_marginRight="20dp"
                    android:gravity="left|center" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tu voto: 8,25"
                    android:id="@+id/emitido5"
                    android:padding="5dp"
                    android:background="@color/gris" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total: 9,00"
                    android:id="@+id/total5"
                    android:layout_alignBottom="@+id/emitido5"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:textColor="@color/seguridad" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="WEB"
        android:id="@+id/buttonWeb"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/seguridad"
        android:textColor="@color/white" />

</RelativeLayout>
